// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/EmptyDashboard should render 1`] = `
<EmptyDashboard
  button={
    <Button
      isDisabled={false}
      isLink={false}
      isLoading={false}
      isSubmit={false}
      loadingText=""
      onBlur={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      style="highlight"
      width="default"
    >
      Highlight Button
    </Button>
  }
  description={
    <div>
      This is a test description about 
      <Link
        href="http://google.com"
      >
        X Feature
      </Link>
       with a Google.
    </div>
  }
  headline="Get started with Optimizely X"
  imagePath="https://app.optimizely.com/static/img/p13n/campaign-list-empty-state.svg"
>
  <div
    className="flex flex--column overflow-y--scroll flex--1"
    data-oui-component={true}
    data-test-section="layers-empty-state"
  >
    <div
      className="flex push-quad--sides oui-empty-dashboard__button-row flex-justified--end"
    >
      <Button
        isDisabled={false}
        isLink={false}
        isLoading={false}
        isSubmit={false}
        loadingText=""
        onBlur={[Function]}
        onClick={[Function]}
        onMouseDown={[Function]}
        style="highlight"
        width="default"
      >
        <button
          aria-live="polite"
          className="oui-button oui-button--highlight oui-button--default"
          data-oui-component={true}
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onMouseDown={[Function]}
          type="button"
        >
          Highlight Button
        </button>
      </Button>
    </div>
    <div
      className="anchor--middle height--1-1 flex flex--row"
    >
      <div
        className="text--center soft-quad"
        data-oui-component={true}
        style={
          Object {
            "margin": "auto",
          }
        }
      >
        <div
          className="push-double--bottom"
        >
          <img
            alt=""
            className="svg--non-scaling-stroke display--inline"
            src="https://app.optimizely.com/static/img/p13n/campaign-list-empty-state.svg"
            style={
              Object {
                "maxHeight": "290px",
                "maxWidth": "450px",
              }
            }
          />
        </div>
        <h1
          className="alpha push--bottom"
        >
          Get started with Optimizely X
        </h1>
        <div
          className="muted push--bottom anchor--middle"
          style={
            Object {
              "maxWidth": undefined,
            }
          }
        >
          <div>
            This is a test description about 
            <Link
              href="http://google.com"
            >
              <a
                className="link"
                data-oui-component={true}
                disabled={false}
                href="http://google.com"
              >
                X Feature
              </a>
            </Link>
             with a Google.
          </div>
        </div>
      </div>
    </div>
  </div>
</EmptyDashboard>
`;

exports[`components/EmptyDashboard should render with button below image when showButtonBelow property is set to TRUE 1`] = `
<EmptyDashboard
  button={
    <Button
      isDisabled={false}
      isLink={false}
      isLoading={false}
      isSubmit={false}
      loadingText=""
      onBlur={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      style="highlight"
      width="default"
    >
      Highlight Button
    </Button>
  }
  description={
    <div>
      This is a test description about 
      <Link
        href="http://google.com"
      >
        X Feature
      </Link>
       with a Google.
    </div>
  }
  headline="Get started with Optimizely X"
  imagePath="https://app.optimizely.com/static/img/p13n/campaign-list-empty-state.svg"
  showButtonBelow={true}
>
  <div
    className="flex flex--column overflow-y--scroll flex--1"
    data-oui-component={true}
    data-test-section="layers-empty-state"
  >
    <div
      className="anchor--middle height--1-1 flex flex--row"
    >
      <div
        className="text--center soft-quad"
        data-oui-component={true}
        style={
          Object {
            "margin": "auto",
          }
        }
      >
        <div
          className="push-double--bottom"
        >
          <img
            alt=""
            className="svg--non-scaling-stroke display--inline"
            src="https://app.optimizely.com/static/img/p13n/campaign-list-empty-state.svg"
            style={
              Object {
                "maxHeight": "290px",
                "maxWidth": "450px",
              }
            }
          />
        </div>
        <h1
          className="alpha push--bottom"
        >
          Get started with Optimizely X
        </h1>
        <div
          className="muted push--bottom anchor--middle"
          style={
            Object {
              "maxWidth": undefined,
            }
          }
        >
          <div>
            This is a test description about 
            <Link
              href="http://google.com"
            >
              <a
                className="link"
                data-oui-component={true}
                disabled={false}
                href="http://google.com"
              >
                X Feature
              </a>
            </Link>
             with a Google.
          </div>
        </div>
        <div
          className="push-double--top"
        >
          <Button
            isDisabled={false}
            isLink={false}
            isLoading={false}
            isSubmit={false}
            loadingText=""
            onBlur={[Function]}
            onClick={[Function]}
            onMouseDown={[Function]}
            style="highlight"
            width="default"
          >
            <button
              aria-live="polite"
              className="oui-button oui-button--highlight oui-button--default"
              data-oui-component={true}
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              type="button"
            >
              Highlight Button
            </button>
          </Button>
        </div>
      </div>
    </div>
  </div>
</EmptyDashboard>
`;
